--- a/code/020_viz_effect_size_overall.Rmd
+++ b/code/020_viz_effect_size_overall.Rmd
@@ -22,6 +22,7 @@ Need to run the following scripts before running this one.
 library(meta)
 packageVersion("meta")
 source('./code/_pkgs_dirs.R')
+source('./code/func_plot_ma.R')
 
 
 ##' an extra post fix for figure's version control
@@ -34,9 +35,10 @@ vv <- ""
 
 ```{r}
 ## select a few easy-to-understand indicator for IALE presentation 
-ind_for_presentation <- c("Anxiety", "Depression", 
-                  # "Stress", 
-                  "Restorative Effect", "Vigor")
+ind_for_presentation <- 
+  c("Anxiety", "Depression", 
+    # "Stress", 
+    "Restorative Effect", "Vigor")
 
 nature_type_remove_for_presentation <- 
   c("Greenspace",
@@ -46,18 +48,25 @@ nature_type_remove_for_presentation <-
 ```
 
 
+
 ```{r - data}
-source('./code/func_plot_ma.R')
 
-mh_tool_list <- c('PANAS', 'POMS') 
-mh_tool_list <- c('PANAS', 'POMS', 'PSS', 'ROS'); design <- 'exp'
-mh_tool_list <- c('GHQ-12', 
-                  'PANAS', 'POMS', 'PSS', 'ROS',
-                  "SF-12", "SF-36", 'WEMWBS', 'WHO-5'); design <- 'obs'
+##' 1. when 'PSS' is mainly used in `obs` studies
+mh_tool_obs <- c('GHQ-12', 'SF-12', 'SF-36', 'WEMWBS', 'WHO-5', 'PSS');
+mh_tool_exp <- c('PANAS', 'POMS', 'ROS', 'STAI', 'SVS');
 
+
+##' 2. when 'PSS' is mainly used in `exp` studies
+mh_tool_obs <- c('GHQ-12')
+                 # 'SF-12', 'SF-36', 'WEMWBS', 'WHO-5'
+mh_tool_exp <- c('PANAS', 'POMS', 'ROS', 'STAI', 'SVS', 'PSS') # , 'DASS-21'
+
+
+
+mh_tool_list <- c(mh_tool_exp, mh_tool_obs); design <- 'exp_obs'
+mh_tool_list <- c(mh_tool_exp);              design <- 'exp'
 
 fs <- list.files(path = "./data/0302-MA-output/", 
-                 # pattern = paste('^ma_result.*_*', sep = ''), ## if opt to include all 
                  pattern = paste('^ma_result.*_', mh_tool_list, sep = '', collapse = '|'), ## if opt to include selected ones
                  full.names = T);
 cat('\n This', length(fs), 'files will be included:\n')
@@ -65,10 +74,14 @@ print(fs)
 
 ma_result_all <- data.frame()
 for (f in fs) {
-  print(f)
-  d <- readRDS(file = f) 
+  # print(f)
+  d <- readRDS(file = f) %>%
+    ## note which tools are exp or obs
+    dplyr::mutate(design = ifelse(tool %in% mh_tool_exp, 'exp', 'obs'))
   ma_result_all <- rbind(ma_result_all, d)
 }
+
+
 # ma_result_panas <- readRDS("./data/0302-MA-output/ma_result.overall_PANAS_.rds") 
 # ma_result_poms  <- readRDS("./data/0302-MA-output/ma_result.overall_POMS_.rds") 
 # ma_result.subgroup_panas <- readRDS("./data/0302-MA-output/ma_result.subgroup_PANAS_.rds") 
@@ -103,23 +116,38 @@ data <- ma_result_all %>%
 x_limit_max <- max(abs(data$es.lower), abs(data$es.upper), na.rm = T) * 1.2
 x_limit_max
 
-data %>%
+p <- data %>%
   plot_effect_size_overall(data = ., 
                            color_var = 'tool', 
                            text_size = 11,
                            show_legend = T) +
-  scale_x_continuous(limits = c(-x_limit_max, x_limit_max)) +
-  theme(legend.position.inside = c(0.85, 0.9),
+  annotate("segment", x = -x_limit_max, xend = x_limit_max, y = 4.5, colour = "gray70", size = 0.5) +
+  theme(legend.position = c(0.85, 0.85),
         # legend.spacing.y = unit(0, 'cm'),
         legend.spacing.x = unit(0.2, 'cm'),
         legend.key.size = unit(0.2, 'cm'),
         plot.margin = margin(t=0, r=0, b=0, l=0, "pt")) +
   guides(color = guide_legend(title="MH Tools"))
 
+
+if(design == 'obs_exp') {
+  p <- p +
+    geom_text(aes(label = design, 
+                  fontface = ifelse(design=='obs', "bold.italic", "italic"),
+                  family = "serif",
+                  x = -2.8),
+              vjust = 0.5, show.legend = F, color ='gray50') +
+    scale_x_continuous(limits = c(-x_limit_max, x_limit_max))
+} else {
+  p <- p
+}
+
+p
+
 n_ind <- length(unique(data$ind_sub)); 
 
 fname <- paste0(dir.fig, 'es_comb_', design, '_', today, vv, '.png'); fname
-func_ggsave(fname, w = 6, h = 5.5/2/6*n_ind, dpi = 300, save_png = T)
+func_ggsave(fname, w = 6, h = 5.5/2/6*n_ind, dpi = 500, save_png = T)
 ```
 
 
@@ -138,8 +166,9 @@ ma_result.subgroup_only <- ma_result_all %>%
 source('./code/func_plot_ma.R')
 source('./code/func_color_bygroup.R')
 
-mh_tools <- c('PANAS', 'POMS'); 
+# mh_tools <- c('PANAS', 'POMS'); 
 # mh_tools <- c('PSS', 'ROS') ; 
+# mh_tools <- c('STAI', 'SVS') ;
 
 
 
@@ -160,14 +189,27 @@ subgroups <- c(
   'age_group', 'gender_group', 'duration_group')
 
 
-ind_sub_levels <- c("TMD", "Anxiety", "Fatigue", "Confusion", "Anger", 
-                    "Depression",  ## for IALE
-                    "Stress", 
-                    "Negative Affect", 
-                    "Positive Affect", 
-                    "Restorative Effect", 
-                    # "Depression", 
-                    "Vigor")
+## indicators to be included in the combined sub-group analysis plots
+unique(ma_result_all$tool) %>% sort()
+unique(ma_result_all$ind_sub) %>% sort()
+
+ind_sub_levels <- c(
+  ## // negative aspect
+  "TMD", 
+  "Anxiety",            # POMS / STAI
+  "Fatigue", "Confusion", "Anger", 
+  "Depression",         # --- POMS
+  "Stress",             # PSS
+  "Negative Affect",    # PANAS
+  
+  ## // positive aspect 
+  "Positive Affect",
+  "Restorative Effect", # ROS
+  "Vigor",              # --- POMS
+  "Vitality"            # SVS
+)   
+
+
 
 
 for (subgroup_select in subgroups) {
@@ -224,7 +266,7 @@ for (subgroup_select in subgroups) {
 ```
 
 
-```{r - p_all, eval=FALSE, include=FALSE}
+```{r - plot_all, eval=FALSE, include=FALSE}
 
 ##' This chunk was used as an example or test code for the source code
 ##' 
