--- a/code/010_MA_data.Rmd
+++ b/code/010_MA_data.Rmd
@@ -233,6 +233,8 @@ df_2o2 <- readRDS(file = f2o2) %>%
   dplyr::mutate(id = gsub('#', '', id),
                 id = trimws(id)) %>%
   as.data.frame()
+
+unique(df$effect_size_indices) %>% sort()
 ```
 
 
@@ -766,7 +768,7 @@ saveRDS(exp_sub_df, file = f)
 ```{r}
 effect_size_ind_i <- c(
   "D",
-  "d",
+  "d_cohens",
   'Raw values',
   "Mean_pre_post")
 ```
